fix for codemirror visibility

--- a/app/source.css
+++ b/app/source.css
@@ -32,7 +32,7 @@
 .editor > div.sql {
   position:absolute;
   top:60px; bottom:0px; width:100%;
-  display:none;
+  visibility: hidden;
   }
 .editor .CodeMirror { top:60px; }
 
@@ -52,7 +52,7 @@
   color: rgba(255,255,255,0.5);
 }
 
-.sql .editor > div.sql { display:block; }
+.sql .editor > div.sql { visibility:visible; }
 .sql .editor > div.sql .CodeMirror { visibility: visible; }
 
 /* XRay tools */
@@ -62,7 +62,7 @@
   cursor: pointer;
   }
 .xrayswatch:hover,
-.xrayinspector:hover { box-shadow:none;}
+.xrayinspector:hover { box-shadow:inset 0px 0px 0px 2px rgba(0,0,0,0.3);}
 .xrayswatch.disabled { background:rgba(0,0,0,0.1) !important; }
 .xrayswatch.disabled::before { visibility:hidden; }
 .xrayinspector::before { visibility:hidden; }
